     and explain the use of the BLKBSZGET define.
   - disk_full.patch by Lamont Cranston (fixes handling of the disk full
     condition when preparing logical drives).
   - iometer2.Lamont001ConstructorCleanup.patch by Daniel Scheibli
     (bundles the changes contributed by Lamont Cranston - it introduces
     the new IOManagerWin.cpp file).
- Cleanup:
   - Adjusted some variable types to fit 64bit OS and compiler.
   - Recovered all corrupted binary files.
   - Added new VS project management file for VS.net.
   - Various cleanup to remove compile warning with new version GCC.
   - Removed wrongly included IOManageSolario.o from Makefile-Linux.ppc.
   - Indent all source code to have better code style.
   - Renamed Makefile-Solaris.Sparc into Makefile-Solaris.sparc
   - Modified an #ifdef in IOPerformanceLinux.cpp to make it work for
     the XScale processor as well.
   - Addded the IOManagerWin.cpp file to the Iometer.dsp project file
     to make Dynamo build with MS VC++.
   - Added a check for null pointers in case a Manager could not be
     added to his list in Galileo[App|Globals].cpp
   - Corrected the macro definition for BLKGETSIZE64 in IOCommon.h
- Documentation:
   - Added further stuff to the Coding Style section of the DEVGUIDE.
   - Added the initial drop of the DocBook sources of the first part of
     the Iometer Users Guide (converted from OpenOffice - by James Rogers).
- Others:
   - Changed the "Help About..." button of the Iometer Wizard to reflect
     the current status (Open Source,...) of Iometer.
   - Converted the Iometer Wizard to the file format of the 2000 version
     of MS Access and fixed the (Excel) version check of the Graph Wizard
     part (as suggested by Joseph R Gruher).
   - Modified the About dialog to point to the Intel Open Source License
     only.



<BRANCH OUT IOMETER1/>
======================



ChangeLog (IOMETER1 - basis for 2004.07.30):
============================================

- Applied patches: