@@ -112,6 +112,8 @@ ChangeLog (IOMETER2 - 2006.mm.dd):
      (bundles the changes contributed by Lamont Cranston - it introduces
      the new IOManagerWin.cpp file).
 - Cleanup:
+   - Renamed Dynamo and Iometer subdirectories to solve the name conflict
+     under case insensitive file system.
    - Adjusted some variable types to fit 64bit OS and compiler.
    - Recovered all corrupted binary files.
    - Added new VS project management file for VS.net.
